--- a/TP2/E2/simplemashup.html
+++ b/TP2/E2/simplemashup.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+<iframe src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></iframe>
 <script>
   function load(){
     var latlng= new google.maps.LatLng (43.6222,7.0500);
